--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -6,7 +6,7 @@
 
 body {
   padding-top: 60px;
-  background-image: url("background.png");  
+  background: url("background.jpg");  
 }
 
 section {
