--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -52,7 +52,7 @@ p {
   float: left;
   margin-right: 10px;
   font-size: 2em;
-  color: white;
+  color: #c5cfe0;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 15px;
