--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,24 +18,16 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
+                <li><a href="#">Sign Up</a></li>
+                <li><a href="#">Sign In</a></li>
                 <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown">Charts
-                  <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="/piecharts">Pie Charts</a></li>
-                    <li><a href="/linecharts">Line Charts</a></li>
-                    <li><a href="/columncharts">Column Charts</a></li>
-                  </ul>
-                </li>
-                <li><a href="/twitterfeed">Twitter Live Feed</a></li>
-                <li class="dropdown">
-               <a class="dropdown-toggle" data-toggle="dropdown">API
+               <a class="dropdown-toggle" data-toggle="dropdown">Charts
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="/api/drivers.json">Drivers JSON</a></li>
-                  <li><a href="/api/results.json">Results JSON</a></li>
-                  <li><a href="/api/races.json">Races JSON</a></li>
+                  <li><a href="/api/drivers.json">Bar Charts</a></li>
+                  <li><a href="/api/results.json">Line Charts</a></li>
                </ul>
+               <li><a href="#">Cart</a></li>
              </li>
             </ul>
         </div>
