--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
-                <li><a href="#">Sign Up</a></li>
+                <li><a href="/signup">Sign Up</a></li>
                 <li><a href="#">Sign In</a></li>
                 <li class="dropdown">
                <a class="dropdown-toggle" data-toggle="dropdown">Charts
