--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,17 +18,31 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
-                <li><a href="/signup">Sign Up</a></li>
-                <li><a href="#">Sign In</a></li>
-                <li class="dropdown">
+                <% if logged_in? %>
+                  <li><a href="#">Users</a></li>
+                  <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
+                      <ul class="dropdown-menu">
+                        <li><%= link_to "Profile", current_user %></li>
+                        <li><a href="#">Settings</a></li>
+                        <li class="divider"></li>
+                        <li><%= link_to "Log out", logout_path, method: :delete %></li>
+                      </ul>
+                  </li>
+                  <li class="dropdown">
                <a class="dropdown-toggle" data-toggle="dropdown">Charts
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="/api/drivers.json">Bar Charts</a></li>
-                  <li><a href="/api/results.json">Line Charts</a></li>
+                  <li><a href="#">Bar Charts</a></li>
+                  <li><a href="#">Line Charts</a></li>
                </ul>
+               <li><a href="#">Instagram</a></li>
                <li><a href="#">Cart</a></li>
              </li>
+                <% else %> 
+                <li><a href="/signup">Sign Up</a></li>
+                <li><a href="/login">Log In</a></li>    
+             <% end %>
             </ul>
         </div>
     </div>
