--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,12 +19,12 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <% if logged_in? %>
-                  <li><a href="#">Users</a></li>
+                  <li><%= link_to "Users", users_path %></li>
                   <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
                       <ul class="dropdown-menu">
                         <li><%= link_to "Profile", current_user %></li>
-                        <li><a href="#">Settings</a></li>
+                        <li><%= link_to "Settings", edit_user_path(current_user) %></li>
                         <li class="divider"></li>
                         <li><%= link_to "Log out", logout_path, method: :delete %></li>
                       </ul>
