data labels added to line chart

--- a/app/views/charts/line_chart.html.erb
+++ b/app/views/charts/line_chart.html.erb
@@ -35,6 +35,9 @@
 	       			colorByPoint: true
 	       		},
 	       		series: {
+	       			dataLabels: {
+                enabled: true
+            },
 	       			borderWidth: 0
 	       		}
 	       },
