--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">Bar Charts</a></li>
-                  <li><a href="#">Line Charts</a></li>
+                  <li><a href="/linecharts">Line Charts</a></li>
                </ul>
                <li><a href="#">Instagram</a></li>
                <li><a href="#">Cart</a></li>
