--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
                <a class="dropdown-toggle" data-toggle="dropdown">Charts
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Bar Charts</a></li>
+                  <li><a href="/barcharts">Bar Charts</a></li>
                   <li><a href="/linecharts">Line Charts</a></li>
                </ul>
                <li><a href="#">Instagram</a></li>
