charts colors change

--- a/app/views/charts/line_chart.html.erb
+++ b/app/views/charts/line_chart.html.erb
@@ -13,8 +13,7 @@
 		width: "1000px",
 		height: "500px", 
 		title: @first_player_name + " vs. " + @second_player_name + " in " + @line_chart_year,
-		  colors: ['#7cb5ec', '#f7a35c', '#90ee7e', '#7798BF', '#aaeeee', '#ff0066',
-	      '#eeaaee', '#55BF3B', '#DF5353', '#7798BF', '#993300', '#666999', '#003300', '#0000cc', '#66ffcc'],
+		  colors: ['#f90000', '#6300f9'],
 		  library: {
 		  	yAxis: {
 		  		reversed: true,
