--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,8 @@
                   <li><a href="/barcharts">Bar Charts</a></li>
                   <li><a href="/linecharts">Line Charts</a></li>
                </ul>
-               <li><a href="#">Instagram</a></li>
+               <li><a href="/twitter">Twitter Feed</a></li>
+               <li><a href="/players">Search Players</a></li>
                <li><a href="#">Cart</a></li>
              </li>
                 <% else %> 
