--- a/app/views/players/search.html.erb
+++ b/app/views/players/search.html.erb
@@ -1,9 +1,11 @@
-<%if params[:last_name] == "" %>
-	<%= flash.now[:alert] = "Player not found" %>
-<% else %>
+<% if params[:last_name] == ""%>
+	<%= flash.now[:alert] = "Please search for player's last name" %>
 
+<% elsif @players %>
 	<% @players.each do |player| %>
 		<%= player.first_name %><br>
 		<%= player.last_name %>
 	<% end %>
+<% else %>
+	<%= flash.now[:alert] = "Player not found" %>	
 <% end %>
