--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,9 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <% if logged_in? %>
+                <% if check_admin? %>
                   <li><%= link_to "Users", users_path %></li>
+                 <% end %>
                   <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
                       <ul class="dropdown-menu">
