changes to search

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -22,7 +22,9 @@
 
 body {
   padding-top: 60px;
-  background: url("background.jpg");  
+  background: url("background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;  
 }
 
 section {
