--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,7 +40,7 @@
                </ul>
                <li><a href="/twitter">Twitter Feed</a></li>
                <li><a href="/players">Search Players</a></li>
-               <li><a href="#">Cart</a></li>
+               <li><a href="/store">Store</a></li>
              </li>
                 <% else %> 
                 <li><a href="/signup">Sign Up</a></li>
