--- a/app/views/charts/form_line_chart.html.erb
+++ b/app/views/charts/form_line_chart.html.erb
@@ -11,7 +11,7 @@
 		  <%= label_tag(:year, "Select year:") %>
 		  <%= select_tag(:line_chart_year, options_for_select({"2017" => "2017", "2016" => "2016", "2015" => "2015", "2014" => "2014",
 		    "2013" => "2013"}), :prompt => "Select year") %>
-		  <%= submit_tag("Display Chart", class: "btn btn-success") %>
+		  <%= submit_tag("Display Chart", class: "btn-success") %>
 	<% end %>
 	</div>
 </center>
