--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,12 +4,13 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #a8a8a8;
-    color: white;
+    background-color: #F0FFFF;
+    color: black;
     text-align: center;
+    font-weight: bold;
 }
 </style>
 
 <div class="footer">
-  <p> March 2018 The Tennis App </p>
+  <p> March 2018 The ATP App </p>
 </div>
