--- a/app/views/players/search.html.erb
+++ b/app/views/players/search.html.erb
@@ -48,7 +48,7 @@
 <% end %>
 
 	<div class="button">
-		  <a href="/players" class="btn btn-warning" role="button">Search for another player</a>
+		  <a href="/players" class="btn btn-danger" role="button">Search for another player</a>
 	</div>
 
 	</tbody>
