--- a/app/views/charts/bar_chart.html.erb
+++ b/app/views/charts/bar_chart.html.erb
@@ -40,7 +40,7 @@
     }
 	%>
 	<div class="button">
-	  <a href="/barcharts" class="btn btn-warning" role="button">Select A Different Year</a>
+	  <a href="/barcharts" class="btn btn-danger" role="button">Select A Different Year</a>
 	</div>
 
 </center>
