--- a/app/views/charts/form_bar_chart.html.erb
+++ b/app/views/charts/form_bar_chart.html.erb
@@ -3,10 +3,10 @@
 	<h1>Bar Charts</h1>
 	<h2>Ranking points over one season</h2>
 	<%= form_tag("/charts/bar_chart", method: "get") do %>
-	<div class="form-style-6">
+	<div class="col-md-4 col-md-offset-4">
 		<%= label_tag(:year, "Select Year:") %>
 		<%= select_tag(:bar_chart_year, options_for_select({"2017" => "2017", "2016" => "2016", "2015" => "2015", "2014" => "2014", "2013" => "2013"}), :prompt => "Select year") %>
-		<%= submit_tag("Display Chart") %>
+		<%= submit_tag("Display Chart", class: "btn btn-danger") %>
 	<% end %>
 	</div>
 </center>
