--- a/app/views/charts/form_line_chart.html.erb
+++ b/app/views/charts/form_line_chart.html.erb
@@ -3,7 +3,7 @@
 	<h1>Line Charts</h1>
 	<h2>Compare two tennis players' ranking over one year</h2>
 	<%= form_tag("/charts/line_chart", method: "get") do %>
-	<div class="col-md-6 col-md-offset-3">
+	<div class="col-md-4 col-md-offset-4">
 		  <%= label_tag(:player, "Select first player") %>
 		  <%= collection_select(:first_player, :player_id, Player.all, :id, :last_name, :prompt => true, class: 'form-control') %>
 		  <%= label_tag(:player, "Select second player:") %>
@@ -11,7 +11,7 @@
 		  <%= label_tag(:year, "Select year:") %>
 		  <%= select_tag(:line_chart_year, options_for_select({"2017" => "2017", "2016" => "2016", "2015" => "2015", "2014" => "2014",
 		    "2013" => "2013"}), :prompt => "Select year") %>
-		  <%= submit_tag("Display Chart", class: "btn-success") %>
+		  <%= submit_tag("Display Chart", class: "btn btn-danger") %>
 	<% end %>
 	</div>
 </center>
