--- a/app/views/charts/line_chart.html.erb
+++ b/app/views/charts/line_chart.html.erb
@@ -93,6 +93,6 @@
 	<% end %>
 
 	<div class="button">
-	  <a href="/linecharts" class="btn btn-warning" role="button">Select Other Players</a>
+	  <a href="/linecharts" class="btn btn-danger" role="button">Select Other Players</a>
 	</div>
 </center>
