--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 <h1>Your Pragmatic Catalog</h1>
 
 <% cache @products do %>
@@ -15,3 +14,5 @@
 		<% end %>
 	<% end %>
 <% end %>
+
+<%= will_paginate %>
