--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,16 +1,14 @@
-<p id="notice"><%= notice %></p>
-
 <h2>Your Cart</h2>
 <table>
 	<% @cart.line_items.each do |item| %>
 		<tr>
 			<td><%= item.quantity %>&times;</td>
 			<td><%= item.product.name %></td>
-			<td class="item_price"><%= quid(item.total_price) %></td>
+			<td><%= quid(item.total_price) %></td>
 		</tr>
 	<% end %>
 
-	<tr class="total_line">
+	<tr>
 		<td colspan="2">Total</td>
 		<td class="total_cell"><%= quid(@cart.total_price) %></td>
 	</tr>
