changing styles of cart

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <div class="boxed">
   <h1>Welcome to the ATP App! </h1>
-  <h2>Check out the latest statistics about your favourite young men's tennis players. Keep track of all the latest tennis news via our twitter feeds page. </h2>
+  <h2>Check out the latest statistics about your favourite young men's tennis players. Keep track of all the latest tennis news via our twitter feeds page. Buy tennis products from our online store.</h2>
 </div>
 
 </body>
