--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -8,9 +8,9 @@
 					<h4><%= product.name %></h4>
 					<%= sanitize(product.description) %><br><br>
 					<h4><%= quid(product.price) %></h4>
-					<div class="add_to_cart_button"><%= button_to 'Add to Cart', line_items_path(product_id: product), class: "btn btn-danger" %><br>
+					<div class="cart_button"><%= button_to 'Add to Cart', line_items_path(product_id: product), class: "btn btn-danger" %><br>
 					</div>
 				</div>
 		<% end %>
 	<% end %>
-<% end %>
+<% end %>  	
