--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,4 +1,4 @@
-<h2>Your Cart</h2>
+<h1>Shopping Cart</h1>
 <table>
 	<% @cart.line_items.each do |item| %>
 		<tr>
@@ -13,7 +13,10 @@
 		<td class="total_cell"><%= quid(@cart.total_price) %></td>
 	</tr>
 </table>
-
-<%= button_to "Checkout", new_order_path, method: :get %>
-<%= button_to 'Empty cart', @cart, method: :delete,
-data: { confirm: 'Are you sure?' } %>
+<div class="cart_button">
+	<%= button_to "Checkout", new_order_path, method: :get, class: "btn btn-danger" %>
+</div>
+<div class="cart_button">
+	<%= button_to 'Empty cart', @cart, method: :delete,
+	data: { confirm: 'Are you sure?' }, class: "btn btn-danger"  %>	
+</div>
