cart moved to navbar

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,6 +40,7 @@
                <li><a href="/twitter">Twitter Feed</a></li>
                <li><a href="/players">Search Players</a></li>
                <li><a href="/store">Store</a></li>
+               <li><%= link_to "Cart", @cart %></li>
              </li>
                 <% else %> 
                 <li><a href="/signup">Sign Up</a></li>
