--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,13 +1,15 @@
-<h2>Your Cart</h2>
+<h1>Shopping Cart</h1>
 <table>
-
-	<%= render(cart.line_items) %>
-	<tr class="total_line">
+	<%= render(@cart.line_items) %>
+	<tr>
 		<td colspan="2">Total</td>
-		<td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
+		<td class="total_cell"><%= quid(@cart.total_price) %></td>
 	</tr>
 </table>
-
-<%= button_to "Checkout", new_order_path, method: :get %>
-<%= button_to 'Empty cart', cart, method: :delete,
-	data: { confirm: 'Are you sure?' } %>
+<div class="cart_button">
+	<%= button_to "Checkout", new_order_path, method: :get, class: "btn btn-danger" %>
+</div>
+<div class="cart_button">
+	<%= button_to 'Empty cart', @cart, method: :delete,
+	data: { confirm: 'Are you sure?' }, class: "btn btn-danger"  %>	
+</div>
