--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,22 +1,1 @@
-<h1>Shopping Cart</h1>
-<table>
-	<% @cart.line_items.each do |item| %>
-		<tr>
-			<td><%= item.quantity %>&times;</td>
-			<td><%= item.product.name %></td>
-			<td><%= quid(item.total_price) %></td>
-		</tr>
-	<% end %>
-
-	<tr>
-		<td colspan="2">Total</td>
-		<td class="total_cell"><%= quid(@cart.total_price) %></td>
-	</tr>
-</table>
-<div class="cart_button">
-	<%= button_to "Checkout", new_order_path, method: :get, class: "btn btn-danger" %>
-</div>
-<div class="cart_button">
-	<%= button_to 'Empty cart', @cart, method: :delete,
-	data: { confirm: 'Are you sure?' }, class: "btn btn-danger"  %>	
-</div>
+<%= render @cart %>
