--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,4 @@
-<div class="depot_form">
-	<fieldset>
-		<legend>Please Enter Your Details</legend>
+<div>
+	<h3>Please Enter Your Details</h3><br><br>
 		<%= render 'form', order: @order %>
-	</fieldset>
 </div>
