--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="row"> 
+  <div class="col-md-6 col-md-offset-3">
 <%= form_with(model: order, local: true) do |form| %>
   <% if order.errors.any? %>
     <div id="error_explanation">
@@ -32,7 +34,8 @@
                   prompt: 'Select a payment method' %>
   </div>
 
-  <div class="actions">
-    <%= form.submit 'Place Order' %>
+  <div class="cart_button">
+    <%= form.submit 'Place Order', class: "btn btn-danger" %>
   </div>
 <% end %>
+</div>
