--- a/app/views/twitter/index.html.erb
+++ b/app/views/twitter/index.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, 'Twitter') %>
+
+<h1> Twitter Feed </h1>
 <center>
 
 	<a class="twitter-timeline"  href="https://twitter.com/hashtag/tennis" data-widget-id="976473319330508801">#tennis Tweets</a>
