--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,27 +1,30 @@
-<p id="notice"><%= notice %></p>
-
+<% provide(:title, 'Products') %>
 <h1>Products</h1>
+<%= will_paginate %>
 <table>
 <% @products.each do |product| %>
-  <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
+  <tr class="products_text">
 
-  <td class="list_description">
+  <td>
+
     <dl>
       <dt><%= product.name %></dt>
       <dd><%= truncate(strip_tags(product.description),
             length: 400) %></dd>
   </dl>
+  <hr />
 </td>
 
-  <td class="list_actions">
-    <%= link_to 'Show', product %><br/>
-    <%= link_to 'Edit', edit_product_path(product) %><br/>
-    <%= link_to 'Destroy', product, method: :delete,
-                data: { confirm: 'Are you sure?' } %>
+  <td>
+    <%= link_to 'Full Details', product %><br/>
+    <%= link_to 'Edit Product', edit_product_path(product) %><br/>
+    <%= link_to 'Delete', product, method: :delete,
+                data: { confirm: 'Are you sure?' } %><br><br><br><br>
   </td>
 </tr>
 <% end %>
 </table>
 
 <br />
-<%= link_to 'New product', new_product_path %>
+
+<%= link_to 'New product', new_product_path, class: "btn btn-danger" %>
