--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,19 +1,23 @@
-<p id="notice"><%= notice %></p>
+<% provide(:title, @product.name) %>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+<h1> Product Full Details </h1><br><br><br>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+<div class="products_text">
+	<p>
+	  <strong>Name:</strong>
+	  <%= @product.name %>
+	</p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
+	<p>
+	  <strong>Description:</strong>
+	  <%= @product.description %>
+	</p>
+
+	<p>
+	  <strong>Price:</strong>
+	  <%= @product.price %>
+	</p>
+</div>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
