--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -27,4 +27,4 @@
 
 <br />
 
-<%= link_to 'New product', new_product_path, class: "btn btn-danger" %>
+<%= link_to 'Add New Product', new_product_path, class: "btn btn-danger" %>
