--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,7 @@
                 <% if logged_in? %>
                 <% if check_admin? %>
                   <li><%= link_to "Users", users_path %></li>
+                  <li><%= link_to "Products", products_path%></li>
                  <% end %>
                   <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
