--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,8 +1,5 @@
-<p id="notice"><%= notice %></p>
-
-
-
-  <strong>Name:</strong>
+<% provide(:title, "Order") %>
+<strong>Name:</strong>
   <%= @order.name %>
 
 <p>
