--- a/app/views/error/not_found.html.erb
+++ b/app/views/error/not_found.html.erb
@@ -1,2 +1,6 @@
-<h1>Error#not_found</h1>
-<p>Find me in app/views/error/not_found.html.erb</p>
+<% provide(:title, '404') %>
+<center>
+	<h1>404</h1>
+	<h1>Page not found</h1>
+	<h3>The requests page doesn't exist</h3>
+</center>
