--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,7 @@
-User#password_reset
+You have requested a password reset link. Please follow the link below to reset your password.
 
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+<%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
+
+The link will expire in two hours.
+
+If you did not request your password to be reset, please ignore this email and your password will remain unchanged.
