--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,4 +1,5 @@
-<h1>Reset your password</h1>
+<h2>The ATP App</h2><br>
+<h3>Password Reset</h3>
 
 <p>You have requested a password reset link. Please follow the link below to reset your password:</p>
 
